--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project name="mod_teamspeak3_viewer" basedir="." default="build">
+<project name="mod_teamspeak3" basedir="." default="build">
 
     <target name="build">
         <if>
